frontend/app/ordering-kiosk/src/components/Location/CustomDropdown.module.css
.customDropdown {
  position: relative;
  width: 100%;
  border-radius: 16px;
}

.selectedOption {
  padding: 10px;
  cursor: pointer;
  background-color: #eee;
  text-align: left;
  border-radius: 16px;
  padding: 20px;
  z-index: 999999;
  border-radius: 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.options {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: #fff;
  border: 1px solid #ccc;
  border-top: none;
  border-radius: 0 0 5px 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  display: none;
  z-index: 99999;
}

.options li {
  padding: 10px;
  cursor: pointer;
  border-bottom: 1px solid #eee;
  text-align: left;
}

.options li:hover, .options li:active {
  background-color: #f0f0f0;
}

.open {
  display: block;
}

